--- a/upvote/app/index.html
+++ b/upvote/app/index.html
@@ -16,7 +16,7 @@
 
     <div class="section">
 
-        <article v-for="submission in sortedSubmissions" v-bind:key="submission.id" class="media">
+        <article v-for="submission in sortedSubmissions" v-bind:key="submission.id" class="media" v-bind:class="{ 'blue-border': submission.votes >= 20 }">
             <figure class="media-left">
                 <img class="image is-64x64" v-bind:src="submission.submissionImage">
             </figure>
@@ -24,7 +24,7 @@
                 <div class="content">
                     <p>
                         <strong><a v-bind:href="submission.url" class="has-text-info"> {{ submission.title }}</a>
-                        <span class="tag is-small">#{{ submission.id }}</span></strong>
+                            <span class="tag is-small">#{{ submission.id }}</span></strong>
                         <br>
                         {{ submission.description }}
                         <br>
@@ -33,7 +33,7 @@
                     </p>
                 </div>
             </div>
-            <div class="media-right">
+            <div class="media-right" @click="upvote(submission.id)">
                 <span class="icon is-small">
                 <i class="fa fa-chevron-up"></i>
                 <strong class="has-text-info">{{ submission.votes }}</strong>
