--- a/upvote/app/index.html
+++ b/upvote/app/index.html
@@ -16,12 +16,12 @@
 
     <div class="section">
       <article v-for="submission in sortedSubmissions"
-        v-bind:key="submission.id"
+        :key="submission.id"
         class="media"
-        v-bind:class="{ 'blue-border': submission.votes >= 20 }">
+        :class="{ 'blue-border': submission.votes >= 20 }">
         <submission-component
-          v-bind:submission="submission"
-          v-bind:submissions="sortedSubmissions">
+          :submission="submission"
+          :submissions="sortedSubmissions">
         </submission-component>
       </article>
     </div>
