--- a/custom_events/app/index.html
+++ b/custom_events/app/index.html
@@ -31,6 +31,7 @@
 
         <input-component :placeholder="placeholder"></input-component>
     </div>
+    <note-count-component></note-count-component>
 </div>
 
 <script src="https://unpkg.com/vue"></script>
