--- a/form_handling/app/index.html
+++ b/form_handling/app/index.html
@@ -13,8 +13,8 @@
 
 <body>
 <div id="app" class="ui container">
-    <h2 class="ui header">What's your favorite Fullstack clothing item?</h2>
-    <button-row></button-row>
+  <h2 class="ui header">Fullstack Clothing Inquiry Sheet</h2>
+  <input-form></input-form>
 </div>
 
 <script src="https://unpkg.com/vue"></script>
